# ALCCO

./: .gitignore  README.md  pyproject.toml
CoreRoot/: db.sqlite3
CoreRoot/App/: admin.py  forms.py  models.py  urls.py
CoreRoot/App/Template/: elements.html  layout.html
CoreRoot/App/Template/Componentes/: banner_component.html  footer.html  header.html
CoreRoot/App/Template/Contacto/: contacto.html  success.html
CoreRoot/App/Template/Donaciones/: donaciones.html
CoreRoot/App/Template/Eventos/: calendar.html  day_detail.html  event_detail.html  eventos.html
CoreRoot/App/Template/FAQ/: preguntas_frecuentes.html
CoreRoot/App/Template/Index/: banner.html  index.html  sections.html
CoreRoot/App/Template/Noticias/: noticia_detail.html  noticias.html
CoreRoot/App/Template/Propuesta/: propuesta.html
CoreRoot/App/migrations/: 0001_initial.py  0002_section.py  0003_banner.py  0004_section_style_class_alter_section_section_type.py  0005_remove_section_style_class.py  0006_alter_section_button_text.py  0007_eventos_nuestrapropuesta_preguntasfrecuentes_and_more.py  0008_alter_noticia_contenido_alter_noticia_titulo.py  0009_alter_noticia_contenido.py  0010_preguntasfrecuentes_button_link_and_more.py
CoreRoot/App/views/: __init__.py  contacto_views.py  donacion_views.py  eventos_views.py  index_views.py  menu_views.py  noticias_views.py
CoreRoot/CoreRoot/: settings.py  urls.py
