[tool.poetry]
name = "avanza-libertad-web"
version = "0.1.0"
description = ""
authors = ["Pablo <godoypablojuan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pillow = "^10.0.0"
mercadopago = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
